BIG-19976 Fix inventory levels not showing

--- a/assets/scss/components/citadel/forms/_forms.scss
+++ b/assets/scss/components/citadel/forms/_forms.scss
@@ -155,10 +155,6 @@
     width: 4.5rem;
 }
 
-.form-field--stock {
-    display: none;
-}
-
 .form-file {
     margin-bottom: spacing("third");
 }
